--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@ body {
 	background:blue;
 }
 div.container {
-   display: flex;
-   justify-content: center;
-   align-items: center;
+   display:flex;
+   flex-direction: center;
+   justify-content:center;
+   align-items:center;
 
 }
 img.centered {
